# globuid

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
examples/: basic.rs
proto/: globuid.proto
src/: lib.rs
src/generator/: mod.rs  nanoid.rs  snowflake.rs  ulid.rs
src/grpc/: mod.rs  server.rs
src/http/: mod.rs  server.rs
src/storage/: file.rs  memory.rs  mod.rs
